--- a/package.json
+++ b/package.json
@@ -122,6 +122,15 @@
           "SwitchCase": 1
         }
       ],
+      "key-spacing": [
+        2,
+        {
+          "beforeColon": true,
+          "afterColon": true,
+          "align": "colon"
+        }
+      ],
+      "no-multi-spaces": 0,
       "jsx-a11y/aria-props": 2,
       "jsx-a11y/heading-has-content": 0,
       "jsx-a11y/href-no-hash": 2,
@@ -203,6 +212,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-polyfill": "6.20.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
@@ -228,6 +238,8 @@
     "redux-saga": "0.14.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.68.5",
     "styled-components": "1.1.2",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.1"
