--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
         2,
         "multiline"
       ],
+      "react/prefer-stateless-function": 0,
       "react/jsx-filename-extension": 0,
       "react/jsx-no-target-blank": 0,
       "react/require-extension": 0,
